--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "google-search": "0.0.5",
+    "google-images": "^2.0.0",
     "jade": "~1.11.0",
     "mongoose": "^4.7.7",
     "morgan": "~1.7.0",
